k8s/infrastructure/vault.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    environment: develop
    service: vault
    managed-by: terraform
